fix(ux): add scrollbar

--- a/src/input.css
+++ b/src/input.css
@@ -16,14 +16,3 @@
   align-items: center;
   z-index: 999;
 }
-
-/* hide scrollbar */
-body::-webkit-scrollbar {
-  width: 0em;
-}
-body::-webkit-scrollbar-thumb {
-  background-color: transparent;
-}
-body::-webkit-scrollbar-track {
-  background-color: transparent;
-}
